# dappier-skyfire-api

./: .env.example  .gitignore  .replit  API_EXAMPLES.md  Dockerfile  LICENSE  README.md  README_MCP_INTEGRATION.md  UI_INTEGRATION_GUIDE.md  app.py  chat.py  demo-test.sh  docker-compose.yml  initialize.py  lightsail-deploy.sh  pyproject.toml  replit.md  requirements.txt  sessions.py  test_chat_history.py  utils.py
.zencoder/rules/: repo.md
agents/: dappier_agent.py  dappier_price_calculator_agent.py  jwt_decoder_agent.py  mcp_connector_agent.py  planning_agent.py  skyfire_charge_token_agent.py  skyfire_find_seller_agent.py  skyfire_kya_agent.py  skyfire_kya_payment_token_agent.py  swarm_factory.py
config/: config.py  settings.py
legacy/: app_old.py
routes/: chat.py  chat_routes.py  health.py  health_routes.py  initialization.py  session_routes.py  sessions.py
services/: chat_service.py  mcp_service.py  session_service.py
utils/: helpers.py
